--- a/HTML+CSS/index.html
+++ b/HTML+CSS/index.html
@@ -6,12 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Scott Paper Company Inc.</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
+
+    <meta name="description" content="Since March of 2009, The Michael Scott Paper Company has
+    been on the forefront of the paper supply industry. Founded in
+    Scranton, PA, by renowned entrepreneur, Michael Scott, The
+    Michael Scott Paper Company is committed to offering primo
+    service, primo paper, at cheapo prices to all of its customers.
+    Know that when you buy paper from The Michael Scott Paper
+    Company, you're buying from Scranton (the people that work
+    here are from Scranton, the paper is made in China or Maine
+    or whatever). The Michael Scott Paper Company, the paper
+    company of tomorrow, today.">
+    <meta name="keywords" content="Michael Scott Paper Company">
+    <meta name="author" content="Ryan Bailey Howard, Vice President at Michael Scott Paper Company Inc.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <header class="header">
-        <nav>
-            <div class="logo"><img src="assets/logo.png" alt=""></div>
+        <nav>    
+            <a href="" aria-label="Go to Homepage"><div class="logo"><img src="assets/logo.png" alt=""></div></a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#products">Products</a></li>
@@ -60,7 +75,7 @@
             </div>
             <div class="products-grid">
                 <div class="product-item">
-                    <h3 class="product-name">Paper</h3>
+                    <h2 class="product-name">Paper</h2>
                     <div class="product-img"><img src="assets/product1.png" alt=""></div>
                     <div class="product-alt">Product 1 alt</div>
                     <p class="product-desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora neque
@@ -68,17 +83,17 @@
                         eligendi assumenda dolorum, nisi reprehenderit veritatis obcaecati sapiente.</p>
                 </div>
                 <div class="product-item">
-                    <h3 class="product-name">Toilet paper</h3>
+                    <h2 class="product-name">Toilet paper</h2>
                     <div class="product-img"><img src="assets/product2.png" alt=""></div>
-                    <div class="product-alt">Product 1 alt</div>
+                    <div class="product-alt">Product 2 alt</div>
                     <p class="product-desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora neque
                         obcaecati accusamus nihil, fugiat odit quis, corporis iste iusto adipisci quod? Consequatur
                         eligendi assumenda dolorum, nisi reprehenderit veritatis obcaecati sapiente.</p>
                 </div>
                 <div class="product-item">
-                    <h3 class="product-name">Paper rolls</h3>
+                    <h2 class="product-name">Paper rolls</h2>
                     <div class="product-img"><img src="assets/product3.png" alt=""></div>
-                    <div class="product-alt">Product 1 alt</div>
+                    <div class="product-alt">Product 3 alt</div>
                     <p class="product-desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora neque
                         obcaecati accusamus nihil, fugiat odit quis, corporis iste iusto adipisci quod? Consequatur
                         eligendi assumenda dolorum, nisi reprehenderit veritatis obcaecati sapiente.</p>
