--- a/HTML+CSS/screenshots.html
+++ b/HTML+CSS/screenshots.html
@@ -13,16 +13,16 @@
     }
 <h2>Validation</h2>
 <p>
-    <img src="assets/screenshots/w3.png" alt="lighthouse">
+    <img src="assets/screenshots/w3.png" alt="valid">
 </p>
 <h2>Lighthouse</h2>
-<img src="assets/screenshots/lighthouse.png" alt="contrast">
+<img src="assets/screenshots/lighthouse.png" alt="lighthouse">
 
 <p>
 </p>
 <h2>Contrast</h2>
 <p>
-    <img src="assets/screenshots/wave.png" alt="valid">
+    <img src="assets/screenshots/wave.png" alt="contrast">
 </p>
 
 </body>
