--- a/JavaScript/mod-04/t7/7.html
+++ b/JavaScript/mod-04/t7/7.html
@@ -12,7 +12,7 @@
   <h1>Find Route to School (Karaportti 2)</h1>
   <form id="route-form">
     <input type="text" id="address" placeholder="Enter your address" required />
-    <input type="text" id="key" placeholder="Enter your Digitrasit API key" required />
+    <input type="text" id="key" placeholder="Enter your Digitransit API key" required />
     <button type="submit">Show Route</button>
   </form>
 
